- add functions getPortfolio and getPortfAcct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@ export(addTxns)
 export(chart.Posn)
 export(getEndEq)
 export(getPosQty)
+export(getPortAcct)
+export(getPortfolio)
+export(getTxns)
 export(initAcct)
 export(initPortf)
 export(updateAcct)
