- fix multiple confusions in passing by value or by reference

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@ export(addTxns)
 export(chart.Posn)
 export(getEndEq)
 export(getPosQty)
-export(getPortAcct)
+export(getPortfAcct)
 export(getPortfolio)
 export(getTxns)
 export(initAcct)
@@ -12,4 +12,3 @@ export(updateAcct)
 export(updateEndEq)
 export(updatePortf)
 #export(updatePosPL)
-export(buildSpread)
