--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Maintainer: Brian G. Peterson <brian@braverock.com>
 Description: Transaction infrastructure for defining instruments, transactions, portfolios and accounts for trading systems and simulation.  Intends to provide portfolio support for multi-asset class and multi-currency portfolios.  Still in heavy development.
 License: GPL
 LazyLoad: yes
-Depends: R (>= 2.9.0), xts (>= 0.7-0), quantmod, FinancialInstrument
+Depends: R (>= 2.9.0), xts (>= 0.7-1), quantmod (>= 0.3-14), FinancialInstrument
 Suggests: PerformanceAnalytics, PortfolioAnalytics
 URL: http://braverock.com/R/
 Copyright: (c) 2008-2010
