--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: blotter
 Type: Package
 Title: Tools for transaction-oriented trading systems development.
-Version: 0.5
+Version: 0.6
 Date: $Date$
-Author: Peter Carl, Brian G. Peterson
+Author: Peter Carl, Brian G. Peterson, Joshua Ulrich
 Maintainer: Brian G. Peterson <brian@braverock.com>
 Description: Transaction infrastructure for defining instruments, transactions, portfolios and accounts for trading systems and simulation.  Intends to provide portfolio support for multi-asset class and multi-currency portfolios.  Still in heavy development.
 License: GPL
 LazyLoad: yes
 Depends: R (>= 2.9.0), xts (>= 0.7-1), quantmod (>= 0.3-14), FinancialInstrument
 Suggests: PerformanceAnalytics, PortfolioAnalytics, Hmisc, RUnit
-URL: http://braverock.com/R/
+Contributors: Wolfgang Wu, Ben McCann 
+URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2010
