--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,15 @@ Version: 0.7
 Date: $Date$
 Author: Peter Carl, Brian G. Peterson, Joshua Ulrich
 Maintainer: Brian G. Peterson <brian@braverock.com>
-Description: Transaction infrastructure for defining instruments, transactions, portfolios and accounts for trading systems and simulation.  Intends to provide portfolio support for multi-asset class and multi-currency portfolios.  Still in heavy development.
+Description: Transaction infrastructure for defining instruments,
+    transactions, portfolios and accounts for trading systems and
+    simulation.  Intends to provide portfolio support for multi-asset
+    class and multi-currency portfolios.  Still in heavy development.
 License: GPL
 LazyLoad: yes
-Depends: R (>= 2.9.0), xts (>= 0.7-5), quantmod (>= 0.3-14), FinancialInstrument
+Depends: R (>= 2.9.0), xts (>= 0.7-5), quantmod (>= 0.3-14),
+    FinancialInstrument
 Suggests: PerformanceAnalytics, PortfolioAnalytics, Hmisc, RUnit
-Contributors: Wolfgang Wu, Ben McCann 
+Contributors: Wolfgang Wu, Ben McCann
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2010
