--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(getPortfolio)
 export(getTxns)
 export(initAcct)
 export(initPortf)
+export(PortfReturns)
 export(updateAcct)
 export(updateEndEq)
 export(updatePortf)
