- roxygenize (almost) all docs - updates to come closer to passing R CMD check

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,11 +1,15 @@
+export(addPortfInstr)
 export(addTxn)
-export(addTxns)
+export(pennyPerShare)
+export(addDiv)
 export(chart.Posn)
+export(chart.Spread)
+export(extractTxns)
 export(getAccount)
 export(getEndEq)
-export(getPosQty)
-export(getPortfAcct)
 export(getPortfolio)
+export(getPosQty)
+export(getPos)
 export(getTxns)
 export(initAcct)
 export(initPortf)
@@ -13,4 +17,3 @@ export(PortfReturns)
 export(updateAcct)
 export(updateEndEq)
 export(updatePortf)
-#export(updatePosPL)
