--- a/.project
+++ b/.project
@@ -3,9 +3,9 @@
 	<name>blotter</name>
 	<comment></comment>
 	<projects>
-		<project>FinancialInstrument</project>
 		<project>PerformanceAnalytics</project>
-		<project>PortfolioAnalytics</project>
+		<project>quantmod</project>
+		<project>quantstrat</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
