--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,21 @@ Author: Peter Carl, Brian G. Peterson, Joshua Ulrich
 Maintainer: Brian G. Peterson <brian@braverock.com>
 Description: Transaction infrastructure for defining instruments,
     transactions, portfolios and accounts for trading systems and
-    simulation.  Intends to provide portfolio support for multi-asset
-    class and multi-currency portfolios.  Still in heavy development.
+    simulation.  Provides portfolio support for multi-asset class and
+    multi-currency portfolios.  Still in heavy development.
 License: GPL
 LazyLoad: yes
-Depends: R (>= 2.9.0), xts (>= 0.7-6.1), quantmod (>= 0.3-14),
+Depends: R (>= 2.11.1), xts (>= 0.7-6.1), quantmod (>= 0.3-14),
     FinancialInstrument
 Suggests: PerformanceAnalytics, PortfolioAnalytics, Hmisc, RUnit
 Contributors: Wolfgang Wu, Ben McCann
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2010
+Collate: 'addPortfInstr.R' 'addTxn.R' 'calcPortfAttr.R'
+    'calcPortfSummary.R' 'calcPortfWgt.R' 'calcPosAvgCost.R'
+    'calcTxnAvgCost.R' 'calcTxnValue.R' 'chart.Posn.R' 'chart.Spread.R'
+    'extractTests.R' 'getAccount.R' 'getByPortf.R' 'getBySymbol.R'
+    'getEndEq.R' 'getPortfAcct.R' 'getPortfolio.R' 'getPosAvgCost.R'
+    'getPosQty.R' 'getPos.R' 'getTxn.R' 'initAcct.R' 'initPortf.R'
+    'initPosPL.R' 'initSummary.R' 'initTxn.R' 'PortfReturns.R'
+    'updateAcct.R' 'updateEndEq.R' 'updatePortf.R' 'updatePosPL.R'
