- add additional daily trade stats functions - update roxygen documentation - remove non-ASCII/UTF-8 characters that were preventing PDF build - bump version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(getTxns)
 export(initAcct)
 export(initPortf)
 export(PortfReturns)
+export(tradeStats)
+export(dailyTxnPL)
+export(dailyEqPL)
 export(updateAcct)
 export(updateEndEq)
 export(updatePortf)
-export(tradeStats)
