--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,27 +1,16 @@
 Package: blotter
 Type: Package
 Title: Tools for transaction-oriented trading systems development.
-Version: 0.7.3
+Version: 0.7.4
 Date: $Date$
 Author: Peter Carl, Brian G. Peterson, Joshua Ulrich
 Maintainer: Brian G. Peterson <brian@braverock.com>
-Description: Transaction infrastructure for defining instruments,
-    transactions, portfolios and accounts for trading systems and
-    simulation.  Provides portfolio support for multi-asset class and
-    multi-currency portfolios.  Still in heavy development.
+Description: Transaction infrastructure for defining instruments, transactions, portfolios and accounts for trading systems and simulation.
+    Provides portfolio support for multi-asset class and multi-currency portfolios.  Still in heavy development.
 License: GPL
 LazyLoad: yes
-Depends: R (>= 2.11.1), xts (>= 0.7-6.8), quantmod (>= 0.3-14),
-    FinancialInstrument
+Depends: R (>= 2.11.1), xts (>= 0.7-6.8), quantmod (>= 0.3-14), FinancialInstrument
 Suggests: PerformanceAnalytics, PortfolioAnalytics, Hmisc, RUnit
 Contributors: Wolfgang Wu, Ben McCann
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2010
-Collate: 'addPortfInstr.R' 'addTxn.R' 'calcPortfAttr.R'
-    'calcPortfSummary.R' 'calcPortfWgt.R' 'calcPosAvgCost.R'
-    'calcTxnAvgCost.R' 'calcTxnValue.R' 'chart.Posn.R' 'chart.Spread.R'
-    'extractTests.R' 'getAccount.R' 'getByPortf.R' 'getBySymbol.R'
-    'getEndEq.R' 'getPortfAcct.R' 'getPortfolio.R' 'getPosAvgCost.R'
-    'getPosQty.R' 'getPos.R' 'getTxn.R' 'initAcct.R' 'initPortf.R'
-    'initPosPL.R' 'initSummary.R' 'initTxn.R' 'PortfReturns.R'
-    'updateAcct.R' 'updateEndEq.R' 'updatePortf.R' 'updatePosPL.R'
