initial revision of chart.Reconcile function for theoretical vs actual reconciliation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(addTxn)
 export(pennyPerShare)
 export(addDiv)
 export(chart.Posn)
+export(chart.Reconcile)
 export(chart.Spread)
 export(extractTxns)
 export(getAccount)
