- fix formatting of return object in dailyStats, export it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(addDiv)
 export(chart.Posn)
 export(chart.Reconcile)
 export(chart.Spread)
+export(dailyStats)
 export(extractTxns)
 export(getAccount)
 export(getEndEq)
