--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(PortfReturns)
 export(tradeStats)
 export(dailyTxnPL)
 export(dailyEqPL)
+export(dailyStats)
 export(updateAcct)
 export(updateEndEq)
 export(updatePortf)
