--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: blotter
 Type: Package
 Title: Tools for transaction-oriented trading systems
     development.
-Version: 0.8.2
+Version: 0.8.3
 Date: $Date$
 Author: Peter Carl, Brian G. Peterson
 Maintainer: Brian G. Peterson <brian@braverock.com>
@@ -16,14 +16,14 @@ LazyLoad: yes
 Depends:
     R (>= 2.11.1),
     xts (>= 0.7-6.17),
-    quantmod (>= 0.3-14),
-    FinancialInstrument
+    zoo,
+    FinancialInstrument(>= 0.6.3)
 Suggests:
     PerformanceAnalytics,
     Hmisc,
     RUnit
 Contributors: Lance Levenson, Ben McCann, Joshua Ulrich,
-    Wolfgang Wu,
+    Wolfgang Wu, Garrett See
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2011
 Collate:
