- update roxygen documentation, bump version, update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getPosQty)
 export(getTxns)
 export(initAcct)
 export(initPortf)
+export(is.account)
 export(is.portfolio)
 export(pennyPerShare)
 export(PortfReturns)
