--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,8 +23,8 @@ Suggests:
     Hmisc,
     RUnit,
     quantmod
-Contributors: Lance Levenson, Ben McCann, Joshua Ulrich,
-    Wolfgang Wu, Garrett See
+Contributors: Dirk Eddelbuettel, Lance Levenson, Ben McCann, 
+    Jeff Ryan, Garrett See, Joshua Ulrich, Wolfgang Wu 
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2011
 Collate:
