--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 export(addDiv)
 export(addPortfInstr)
 export(addTxn)
+export(chart.ME)
 export(chart.Posn)
 export(chart.Reconcile)
 export(chart.Spread)
@@ -16,6 +17,7 @@ export(getPosQty)
 export(getTxns)
 export(initAcct)
 export(initPortf)
+export(is.account)
 export(is.portfolio)
 export(pennyPerShare)
 export(PortfReturns)
