--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(initPortf)
 export(is.account)
 export(is.portfolio)
 export(pennyPerShare)
+export(perTradeStats)
 export(PortfReturns)
 export(tradeStats)
 export(updateAcct)
