--- a/.project
+++ b/.project
@@ -17,5 +17,6 @@
 	<natures>
 		<nature>de.walware.statet.base.StatetNature</nature>
 		<nature>de.walware.statet.r.RNature</nature>
+		<nature>de.walware.statet.r.RPkgNature</nature>
 	</natures>
 </projectDescription>
