--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(is.portfolio)
 export(pennyPerShare)
 export(perTradeStats)
 export(PortfReturns)
+export(tradeQuantiles)
 export(tradeStats)
 export(updateAcct)
 export(updateEndEq)
