--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,4 @@ Contributors: Dirk Eddelbuettel, Jan Humme, Lance Levenson,
     Ben McCann, Jeff Ryan, Garrett See, Joshua Ulrich, Wolfgang Wu
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2012
+ByteCompile: TRUE
