- introduced put.portfolio() for better data abstraction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,4 @@
+export(PortfReturns)
 export(addDiv)
 export(addPortfInstr)
 export(addTxn)
@@ -22,7 +23,7 @@ export(is.account)
 export(is.portfolio)
 export(pennyPerShare)
 export(perTradeStats)
-export(PortfReturns)
+export(put.portfolio)
 export(tradeQuantiles)
 export(tradeStats)
 export(updateAcct)
