--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,3 +28,38 @@ Contributors: Dirk Eddelbuettel, Jan Humme, Lance Levenson,
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2012
 ByteCompile: TRUE
+Collate:
+    'PortfReturns.R'
+    'addPortfInstr.R'
+    'addTxn.R'
+    'calcPortfWgt.R'
+    'calcPosAvgCost.R'
+    'calcTxnAvgCost.R'
+    'calcTxnValue.R'
+    'chart.ME.R'
+    'chart.Posn.R'
+    'chart.Reconcile.R'
+    'chart.Spread.R'
+    'extractTests.R'
+    'getAccount.R'
+    'getByPortf.R'
+    'getBySymbol.R'
+    'getEndEq.R'
+    'getPortfAcct.R'
+    'getPortfolio.R'
+    'getPos.R'
+    'getPosAvgCost.R'
+    'getPosQty.R'
+    'getTxn.R'
+    'initAcct.R'
+    'initPortf.R'
+    'initPosPL.R'
+    'initSummary.R'
+    'initTxn.R'
+    'perTradeStats.R'
+    'put.portfolio.R'
+    'tradeStats.R'
+    'updateAcct.R'
+    'updateEndEq.R'
+    'updatePortf.R'
+    'updatePosPL.R'
