- introduced put.account() for better data abstraction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(is.account)
 export(is.portfolio)
 export(pennyPerShare)
 export(perTradeStats)
+export(put.account)
 export(put.portfolio)
 export(tradeQuantiles)
 export(tradeStats)
