- introduced rudimentary account transaction functionality - modified initAcct and updateAcct to handle account txns - added addAcctTxn for passing data in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@ export(PortfReturns)
 export(addDiv)
 export(addPortfInstr)
 export(addTxn)
+export(addAcctTxn)
 export(calcPortfWgt)
 export(chart.ME)
 export(chart.Posn)
