- split getPortfolio into public and internal functions to avoid accidental environment damage - update svn propset on .R files for Date Author Id tags

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: blotter
 Type: Package
 Title: Tools for transaction-oriented trading systems
     development.
-Version: 0.8.16
+Version: 0.8.17
 Date: $Date$
 Author: Peter Carl, Brian G. Peterson
 Maintainer: Brian G. Peterson <brian@braverock.com>
@@ -10,7 +10,7 @@ Description: Transaction infrastructure for defining
     instruments, transactions, portfolios and accounts for
     trading systems and simulation. Provides portfolio
     support for multi-asset class and multi-currency
-    portfolios.  Still in development.
+    portfolios.  Actively maintained and developed.
 License: GPL
 LazyLoad: yes
 Depends:
