--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,11 @@
-useDynLib(blotter)
+export(.getPortfolio)
+export(AcctReturns)
 export(PortfReturns)
+export(addAcctTxn)
 export(addDiv)
 export(addPortfInstr)
 export(addTxn)
-export(addAcctTxn)
+export(addTxns)
 export(calcPortfWgt)
 export(chart.ME)
 export(chart.Posn)
