--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: blotter
 Type: Package
 Title: Tools for transaction-oriented trading systems
     development.
-Version: 0.8.19
-Date: $Date$
+Version: 0.9.1644
+Date: $Date: 2014-11-01 14:32:11 -0600 (Sat, 01 Nov 2014) $
 Author: Peter Carl, Brian G. Peterson
 Maintainer: Brian G. Peterson <brian@braverock.com>
 Description: Transaction infrastructure for defining
@@ -23,7 +23,7 @@ Depends:
 Suggests:
     Hmisc,
     RUnit,
-Contributors: Dirk Eddelbuettel, Jan Humme, Lance Levenson,
+Contributors: Daniel Cegielka, Dirk Eddelbuettel, Jan Humme, Lance Levenson,
     Ben McCann, Jeff Ryan, Garrett See, Joshua Ulrich, Wolfgang Wu
 URL: https://r-forge.r-project.org/projects/blotter/
 Copyright: (c) 2008-2014
